force-app/main/default/objects/AIPlatformLogEvent__e/AIPlatformLogEvent__e.object-meta.xml
<CustomObject>
    <description>Publishes exception details at the moment they&apos;re caught, decoupled from the failing transaction. A subscriber trigger performs the actual AIPlatformLog__c insert asynchronously, so the log entry survives even if the transaction that caught the exception rolls back.</description>
    <label>AI Platform Log Event</label>
    <pluralLabel>AI Platform Log Events</pluralLabel>
</CustomObject>