force-app/main/default/objects/AIPlatformLogEvent__e/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>Where the exception occurred.</description>
    <inlineHelpText>Populated automatically by AiPlatformLogManager at the point the exception is caught.</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>