force-app/main/default/objects/AIPlatformLogEvent__e/fields/ExceptionLogDetail__c.field-meta.xml
<CustomField>
    <fullName>ExceptionLogDetail__c</fullName>
    <description>Detailed view of a single logged exception, including the class, method, exception type and message, full stack trace, and the record and user involved at the time of failure</description>
    <inlineHelpText>Detailed view of a single logged exception, including the class, method, exception type and message, full stack trace, and the record and user involved at the time of failure</inlineHelpText>
    <label>Exception Log Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>