force-app/main/default/objects/AIPlatformLogEvent__e/fields/ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>ExceptionMessage__c</fullName>
    <description>The exception&apos;s message.</description>
    <inlineHelpText>Populated automatically from the caught exception.</inlineHelpText>
    <label>Exception Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>