force-app/main/default/objects/AIPlatformLogEvent__e/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <description>The exception class, such as System.DmlException.</description>
    <inlineHelpText>Populated automatically from the caught exception&apos;s type.</inlineHelpText>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>