force-app/main/default/objects/AIPlatformLogEvent__e/fields/OccurredAt__c.field-meta.xml
<CustomField>
    <fullName>OccurredAt__c</fullName>
    <description>When the exception occurred.</description>
    <inlineHelpText>Populated automatically at the moment of catching the exception.</inlineHelpText>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>