force-app/main/default/objects/AIPlatformLogEvent__e/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>The full stack trace at the point of failure.</description>
    <inlineHelpText>Populated automatically. Used by the subscriber to build the full log record.</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>