force-app/main/default/objects/AIPlatformLogEvent__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>The Id of the user running the action that caused this exception.</description>
    <inlineHelpText>Populated automatically from the running user.</inlineHelpText>
    <label>User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>